apps/ur/ur_dll/ur_dll.h

    
	typedef struct aoiInfo aoiMotorData;
	//typedef struct _MyString MotorData;
	GT_API int Ur_Init();
	GT_API int Ur_Connect(int urSn, char *ip);
	GT_API int Ur_DisConnect(int urSn);
	GT_API int Ur_Send(int urSn, char *str, int len);
	
	//GT_API int Ur_GetMotorData(double *URPose, double *MotorAng, int urSn);
	GT_API int Ur_GetMotorData(aoiMotorData* motorInfo, int urSn);
	GT_API int Ur_Receive(int urSn);
	GT_API int Ur_Close();
    
	GT_API int Ur_urModel(HANDLE aoiHandle);
	GT_API int Ur_DrawUr(void);